<resources>
    <string name="app_name">EsieaBoard</string>
    <string name="log_in">LOG IN</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_button">Sign in</string>
    <string name="log_in_button">Log in</string>
    <string name="profile_picture">profile_picture</string>
    <string name="back_button">back_button</string>
    <string name="log_out">Log out</string>
    <string name="modify">Modify</string>
    <string name="event_board">Event Board</string>
    <string name="username">Username</string>
    <string name="email_address_et_esiea_fr">email.address@et.esiea.fr</string>
    <string name="club_name">Club name</string>
    <string name="event_name">Event name</string>
    <string name="event_date">Date</string>
    <string name="event_nb_participants">Participants: XXX</string>
    <string name="events">Events:</string>
    <string name="new_event">New</string>
    <string name="logo_image">logo_image</string>
</resources>