<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/log_in_text"
              android:hint="@string/sign_in"
              android:textAlignment="center"
              android:textSize="96sp"
              android:layout_margin="12dp"
              android:textColorHint="@color/black"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/email_address_input"
              android:hint="@string/email_address"
              android:inputType="textEmailAddress"
              android:autofillHints="emailAddress"
              android:textSize="24sp"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/password_input"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:autofillHints="password"
              android:textSize="24sp"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/confirm_button"
            android:hint="@string/confirm"
            android:textSize="34sp"
            android:layout_margin="12dp"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/log_in_button"
            android:hint="@string/log_in_button"
            android:backgroundTint="#FFFFFF"
            android:textSize="16sp"
            android:textColorHint="#757575"/>

</LinearLayout>