<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/log_in_text"
              android:hint="@string/log_in"
              android:textAlignment="center"
              android:textSize="96sp"
              android:layout_margin="12dp"
              android:textColorHint="@color/black"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/email_address_edit"
              android:hint="@string/email_address"
              android:inputType="textEmailAddress"
              android:autofillHints="emailAddress"
              android:textSize="24sp"
              android:textColorHint="@color/black"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/password_edit"
              android:hint="@string/password"
              android:inputType="numberPassword"
              android:autofillHints="password"
              android:textSize="24sp"
              android:textColorHint="@color/black"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/confirm_button"
            android:hint="@string/confirm"
            android:textSize="34sp"
            android:layout_margin="12dp"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:hint="@string/sign_in_button"
            android:backgroundTint="#FFFFFF"
            android:textSize="16sp"
            android:textColorHint="#757575"/>

</LinearLayout>