<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:background="#D9D9D9">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/log_in_text"
              android:text="@string/log_in"
              android:textAlignment="center"
              android:textSize="96sp"
              android:layout_margin="12dp"
              android:textColor="@color/black"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/email_address_input"
              android:hint="@string/email_address"
              android:textColor="@color/black"
              android:textColorHint="#646262"
              android:inputType="textEmailAddress"
              android:autofillHints="emailAddress"
              android:textSize="24sp"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/password_input"
              android:hint="@string/password"
              android:textColor="@color/black"
              android:textColorHint="#646262"
              android:inputType="textPassword"
              android:autofillHints="password"
              android:textSize="24sp"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/confirm_button"
            android:text="@string/confirm"
            android:textSize="34sp"
            android:backgroundTint="#2DAAE1"
            android:layout_margin="12dp"
            android:textColor="@color/black"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:text="@string/sign_in_button"
            android:backgroundTint="#7BC9EB"
            android:textSize="16sp"
            android:textColor="@color/black"/>

</LinearLayout>