<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:background="#D9D9D9">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#C4C3C3">

        <ImageButton android:layout_width="50dp" android:layout_height="50dp"
                     android:id="@+id/back_button"
                     android:src="@drawable/back_button"
                     android:contentDescription="@string/back_button"
                     android:layout_alignParentStart="true"
                     android:scaleType="centerCrop"
                     android:padding="0dp"
                     android:layout_margin="16dp"
                     android:background="#C4C3C3"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/log_out_button"
                android:hint="@string/log_out"
                android:backgroundTint="#C4C3C3"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="16dp"/>

    </RelativeLayout>

    <ImageView android:layout_width="192dp" android:layout_height="173dp"
               android:id="@+id/logo_image"
               android:contentDescription="@string/profile_picture"
               android:layout_margin="10dp"
               android:src="@drawable/pp"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/modify_button"
            android:text="@string/modify"
            android:backgroundTint="#D9D9D9"
            android:textColor="#757575"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/user_name"
              android:text="@string/username"
              android:textColor="@color/black"
              android:textSize="34sp" android:textAlignment="center"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/user_email_address"
              android:text="@string/email_address_et_esiea_fr"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:textAlignment="center"/>

    <Button
            android:text="Manage Rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manage_rights_button"
            android:backgroundTint="#2DAAE1"
            android:textColor="@color/black"
            android:layout_margin="16dp"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/black"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/user_description"
              android:text="Write something interesting about yourself!"
              android:textColor="@color/black"
              android:padding="30dp" android:textAlignment="textStart"/>

</LinearLayout>