<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:background="#D9D9D9">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#C4C3C3">

        <ImageButton android:layout_width="50dp" android:layout_height="50dp"
                     android:id="@+id/back_button"
                     android:src="@drawable/back_button"
                     android:contentDescription="@string/back_button"
                     android:layout_alignParentStart="true"
                     android:scaleType="centerCrop"
                     android:padding="0dp"
                     android:layout_margin="16dp"
                     android:background="#C4C3C3"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/edit_button"
                android:text="Edit"
                android:textSize="26sp"
                android:backgroundTint="#C4C3C3"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

    </RelativeLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/event_name"
              android:text="@string/event_name"
              android:textColor="@color/black"
              android:textSize="60sp"
              android:padding="16dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/event_date"
              android:text="@string/event_date"
              android:textColor="@color/black"
              android:textSize="34sp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/event_location"
              android:text="Location"
              android:textColor="#646262"
              android:textSize="20sp"/>

    <Button
            android:text="Delete Event"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:backgroundTint="#7BC9EB"
            android:layout_margin="16dp"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/black"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/event_description"
              android:text="Detailed description of the event, little teaser to again draw people in"
              android:textSize="20sp"
              android:textColor="@color/black"
              android:padding="30dp"/>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="end"
                  android:layout_margin="10dp">

        <TextView
                android:text="Attendees"
                android:textColor="#646262"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/event_attendees"
                android:textAlignment="viewEnd"/>

        <TextView
                android:text="/"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Capacity"
                android:textColor="#646262"
                android:layout_gravity="end"
                android:id="@+id/event_capacity"/>

    </LinearLayout>

    <Button
            android:text="Attend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:backgroundTint="#2DAAE1"
            android:textColor="@color/black"
            android:id="@+id/attend_button"/>

    <Button
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:backgroundTint="#7BC9EB"
            android:textColor="@color/black"
            android:id="@+id/cancel_button"/>

</LinearLayout>